@@ -2,6 +2,8 @@
 -----------------------------------------------------------------------------------------------------------------------
 when client fails connection to server, it does not actually reconnect (though it does say 'reconnecting...')
 -----------------------------------------------------------------------------------------------------------------------
+when in anchors dialog moving objs works great but resizing them doesnt resize the ghost along with the object
+    in retrospect I'm thinking; leave the ghost where it was to show original position and just move the object!!!
 -----------------------------------------------------------------------------------------------------------------------
 -----------------------------------------------------------------------------------------------------------------------
 -----------------------------------------------------------------------------------------------------------------------
